# yolo_inference

./: .gitignore  README.md
cpp/: CMakeLists.txt  main.cpp
cpp/include/: detector.hpp  gui.hpp
cpp/src/: detector.cpp  gui.cpp
python/: .gitignore  check_dataset.py  export.py  pyproject.toml  quantize_onnx.py  train.py  train_baseline.py  train_distill.py  train_ghost.py  visualize_compare.py
